# CMOR438

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: Tests.yml
Python Package/final_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python Package/final_ml/supervised_learning/: decision_tree.py  ensemble.py  knn.py  linear_regression.py  logistic_regression.py  mlp.py  perceptron.py  random_forest.py  regression_tree.py
Python Package/final_ml/unsupervised_learning/: dbscan.py  kmeans.py  pca.py
Supervised-Learning/E) K-Nearest-Neighbors/: KNN.ipynb
Supervised-Learning/K-Nearest-Neighbors/: K-Nearest-Neighbors.ipynb
Supervised-Learning/K-Nearest-Neighbors/.ipynb_checkpoints/: K-Nearest-Neighbors-checkpoint.ipynb
Unsupervised-Learning /A) PCA/: The-Perceptron.ipynb
examples/supervised/A) The-Perceptron/: README.md  The-Perceptron.ipynb
examples/supervised/B) Linear Regression/: Linear_Regression-2.ipynb  Linear_Regression.ipynb
examples/supervised/C) Logistic Regression/: logistic_regression.ipynb
examples/supervised/D) Multilayer Perceptron/: MLP.ipynb
examples/supervised/E) K-Nearest-Neighbors/: KNN.ipynb  README.md
examples/supervised/F) Regression Trees/: Regression_Tree.ipynb
examples/unsupervised/A) PCA/: PCA.ipynb
tests/unit/: test_dbscan.py  test_decision_tree_classifier.py  test_decision_tree_regressor.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_mlp-2.py  test_pca.py  test_perceptron.py  test_random_forest.py
(+5 files in other folders)
